data/collection/fixes/descriptions/scala/scala-6560
scala> trait T
defined trait T

scala> case object A extends T
defined module A

scala> Map[Set[T],Int](Set(A) -> 1)
<console>:10: error: type mismatch;
 found   : (scala.collection.immutable.Set[A.type], Int)
 required: (Set[T], Int)
              Map[Set[T],Int](Set(A) -> 1)
                                     ^